# TradingBacktester

./: README.md  TODO  app.py  config.ini  database.py  historical_data.py  indicators.py  main.py  pyproject.toml  recovery.db
Historical_Data/: BTCUSDT-1d-2021-10.csv  BTCUSDT-30m-2021-01.csv  BTCUSDT-4h-2021-01.csv  BTCUSDT-5m-2021-10.csv
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql  00003.edgeql  00004.edgeql
static/: styles.css
strategies/: test strat.ini  test_strat.strategy
templates/: 404.html  historical_data.html  index.html  layout.html  strategies.html  strategy_creation.html
