[tool.poetry]
name = "TradingBacktester"
version = "0.1.0"
description = "A program made to backtest a coin based on historical data and certain techincal indicators"
authors = ["Juup Pikkemaat <pikkemaatjuup@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
configparser = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
