[tool.poetry]
name = "tradingbacktester"
version = "0.1.0"
description = ""
authors = ["Juup Pikkemaat <Pikkemaatjuup@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
edgedb = "^0.20.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
